--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div class="card-body">
                         <form action="auth.php" method="POST">
                             <div class="form-group">
-                                <a href="hai2.html" type="button" class="btn btn-primary btn-block"  data-aos="fade-right">Next</a>
+                                <a href="index2.html" type="button" class="btn btn-primary btn-block"  data-aos="fade-right">Next</a>
                                 <script src="dist/sweetalert2.all.min.js"></script>
                     
                         </form>
