--- a/index2.html
+++ b/index2.html
@@ -21,8 +21,8 @@
                     <div class="card-body">
                         <form action="auth.php" method="POST">
                             <div class="form-group">
-                                <a href="halaman3.html" type="button" class="btn btn-primary btn-block" data-aos="fade-right">Next</a>
-                                <a href="hai.html" type="button" class="btn btn-primary btn-block" data-aos="fade-left">Previous</a>
+                                <a href="index3.html" type="button" class="btn btn-primary btn-block" data-aos="fade-right">Next</a>
+                                <a href="index.html" type="button" class="btn btn-primary btn-block" data-aos="fade-left">Previous</a>
                                 <script src="dist/sweetalert2.all.min.js"></script>
                     
                         </form>
