--- a/index3.html
+++ b/index3.html
@@ -19,10 +19,10 @@
                     <div class="card-body">
                         <form action="" method="POST">
                                 <div class="form-group">
-                                <a href="halaman4.html" type="button" class="btn btn-primary btn-block" data-aos="fade-left">Next</a>
+                                <a href="index4.html" type="button" class="btn btn-primary btn-block" data-aos="fade-left">Next</a>
                                 </div>
                                 <div class="form-group">
-                                <a href="hai2.html" type="button" class="btn btn-primary btn-block" data-aos="fade-right">Previous</a>
+                                <a href="index2.html" type="button" class="btn btn-primary btn-block" data-aos="fade-right">Previous</a>
                                 </div>
                                 <script src="dist/sweetalert2.all.min.js"></script>
                     
