--- a/index4.html
+++ b/index4.html
@@ -22,10 +22,10 @@
                                 <button type="button" onclick="swal.fire('nahh fahamm?? bisaa kaann ^^ lanjut yaa')" class="btn btn-primary btn-block">Pesan</button>
                                 </div>
                                 <div class="form-group">    
-                                <a href="halaman5.html" type="button" class="btn btn-primary btn-block" data-aos="fade-right">Next</a>
+                                <a href="index5.html" type="button" class="btn btn-primary btn-block" data-aos="fade-right">Next</a>
                                 </div>
                                 <div class="form-group">
-                                <a href="halaman3.html" type="button" class="btn btn-primary btn-block" data-aos="fade-left">Previous</a>
+                                <a href="index3.html" type="button" class="btn btn-primary btn-block" data-aos="fade-left">Previous</a>
                                 </div>
                                 <script src="dist/sweetalert2.all.min.js"></script>
                     
