--- a/index6.html
+++ b/index6.html
@@ -26,10 +26,10 @@
                                   });" class="btn btn-primary btn-block" data-aos="fade-right">Pesan</button>
                                 </div>
                                 <div class="form-group">    
-                                <a href="halaman7.html" type="button" class="btn btn-primary btn-block" data-aos="fade-left">Next</a>
+                                <a href="index7.html" type="button" class="btn btn-primary btn-block" data-aos="fade-left">Next</a>
                                 </div>
                                 <div class="form-group">
-                                <a href="halaman5.html" type="button" class="btn btn-primary btn-block" data-aos="fade-right">Previous</a>
+                                <a href="index5.html" type="button" class="btn btn-primary btn-block" data-aos="fade-right">Previous</a>
                                 </div>
                                 <script src="dist/sweetalert2.all.min.js"></script>
                     
