--- a/index7.html
+++ b/index7.html
@@ -26,10 +26,10 @@
                                   });" class="btn btn-primary btn-block" data-aos="fade-left">Pesan</button>
                                 </div>
                                 <div class="form-group">    
-                                <a href="final.html" type="button" class="btn btn-primary btn-block" data-aos="fade-right">Next</a>
+                                <a href="index8.html" type="button" class="btn btn-primary btn-block" data-aos="fade-right">Next</a>
                                 </div>
                                 <div class="form-group">
-                                <a href="halaman6.html" type="button" class="btn btn-primary btn-block" data-aos="fade-left">Previous</a>
+                                <a href="index6.html" type="button" class="btn btn-primary btn-block" data-aos="fade-left">Previous</a>
                                 </div>
                                 <script src="dist/sweetalert2.all.min.js"></script>
                     
