--- a/index8.html
+++ b/index8.html
@@ -34,10 +34,10 @@
                                   });" class="btn btn-primary btn-block" data-aos="fade-right">Pesan</button>
                                 </div>    
                                 <div class="form-group">
-                                <a href="halaman7.html" type="button" class="btn btn-primary btn-block" data-aos="fade-left">Previous</a>
+                                <a href="index7.html" type="button" class="btn btn-primary btn-block" data-aos="fade-left">Previous</a>
                                 </div>
                                 <div class="form-group">
-                                <a href="hai.html" type="button" class="btn btn-primary btn-block" data-aos="fade-rigt">Home</a>
+                                <a href="index.html" type="button" class="btn btn-primary btn-block" data-aos="fade-rigt">Home</a>
                                 </div>
                                 <script src="dist/sweetalert2.all.min.js"></script>
                                 
