--- a/index6.html
+++ b/index6.html
@@ -22,7 +22,7 @@
                                 <button type="button" onclick="Swal.fire({
                                     title: 'haloo hanii ^^',
                                     text: 'aku nge pens ahahaha :D, aku pertama kali liat kamu di tanggal 22 januari di sg nya qila waktu kamu ultah hwahaha:D, terus waktu event miko berbaris kemarin aku sempet liat kamu lagi hanii, oiyaa barakallah fii umrik yaa^^, walau telat bangett bangett gapapa lah yaa, daripada tidak sama sekali :D',
-                                    icon: 'question'
+                                    icon: ''
                                   });" class="btn btn-primary btn-block" data-aos="fade-right">Pesan</button>
                                 </div>
                                 <div class="form-group">    
